# vacuum

./: .gitignore  .travis.yml  AUTHORS.txt  README.md  Setup.lhs  gen-closuretype.pl  index.html  params.json  stack.yaml  vacuum.cabal
pkgs/cairo/System/Vacuum/: Cairo.hs
pkgs/graphviz/: vacuum-graphviz.cabal
pkgs/graphviz/src/GHC/Vacuum/: GraphViz.hs
src/GHC/: Vacuum.hs
src/GHC/Vacuum/: ClosureType.hs  Internal.hs  Pretty.hs  Q.hs  Types.hs  Util.hs
src/GHC/Vacuum/ClosureType/: V700.hs  V702.hs  V704.hs  V706.hs  V708.hs  V710.hs
