name:               vacuum
version:            2.0.0.0
cabal-version:      >= 1.6
build-type:         Simple
license:            LGPL
license-file:       LICENSE
category:           Debug, GHC
author:             Matt Morrow
copyright:          (c) Matt Morrow 2009
-- Maintained through https://github.com/haskell-pkg-janitors. Join us!
maintainer:         Austin Seipp <as@hacks.yi.org>
homepage:           http://web.archive.org/web/20100410115820/http://moonpatio.com/vacuum/
stability:          experimental
synopsis:           Extract graph representations of values on the GHC heap.
description:        <http://web.archive.org/web/20100410115820/http://moonpatio.com/vacuum/>

source-repository head
  type: git
  location: git://github.com/haskell-pkg-janitors/vacuum.git

library
  hs-source-dirs:   src
  ghc-options:      -funbox-strict-fields
  extensions:       CPP, BangPatterns
  includes:         ghcautoconf.h
  build-depends:    ghc-prim,
                    base        >  3   && < 5,
                    array       >= 0.3 && <= 0.4,
                    containers  >= 0.4 && <= 0.5,
                    -- haskell-src-meta

  exposed-modules:  GHC.Vacuum,
                    GHC.Vacuum.ClosureType,
                    GHC.Vacuum.Internal,
                    GHC.Vacuum.Q,
                    GHC.Vacuum.Types,
                    GHC.Vacuum.Util,
                    GHC.Vacuum.Pretty
